--- a/src/index.css
+++ b/src/index.css
@@ -189,4 +189,5 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 10;
 }
